--- a/11-TratamentodeErros/trycatch.html
+++ b/11-TratamentodeErros/trycatch.html
@@ -17,7 +17,9 @@
         catch(e){
             alert(`erro `)
             console.log(e.message)
-
+        }
+        finally{
+            console.log(`bloco finally`)
         }
     </script>
     
