--- a/15-ListaDeAlunos/index.html
+++ b/15-ListaDeAlunos/index.html
@@ -128,9 +128,7 @@
       </table>
       </div>
 
-     <script src="script.js">
-        
-     </script>
+     <script src="script.js"></script>
       
 
     </body>
