--- a/16-DOMpt2/2-NavigateDom.html
+++ b/16-DOMpt2/2-NavigateDom.html
@@ -43,6 +43,16 @@
 
         const h2nextsibling = h2.nextElementSibling
         h2nextsibling.style.background = "yellow"
+
+        const link = document.querySelector("a")
+        const list = document.querySelector("ul ul")
+        console.log(link)
+        console.log(list)
+        console.log(list.childNodes)
+        console.log(list.children)
+        console.log(link.parentElement.childNodes)
+        console.log(link.parentElement.children)
+
     </script>
 </body>
 </html>
