--- a/15-ListaDeAlunos/1-index.html
+++ b/15-ListaDeAlunos/1-index.html
@@ -128,7 +128,7 @@
       </table>
       </div>
 
-     <script src="script.js"></script>
+     <script src="1-script.js"></script>
       
 
     </body>
