--- a/16-DOMpt2/3-CreateDOM.html
+++ b/16-DOMpt2/3-CreateDOM.html
@@ -54,6 +54,8 @@
         ul2.insertAdjacentHTML("beforeend", "<b>CU em Negrito3</b>")
         ul2.insertAdjacentHTML("afterend", "<b>CU em Negrito4</b>")
 
+        title2.remove()
+
     </script>
 </body>
 </html>
